2003-03-31  Ross Burton  <ross@burtonini.com>

	* tests/Makefile.am (AM_CFLAGS): Whoops, need -export-dynamic
	here. I wonder how it worked...

2003-03-30  Ross Burton  <ross@burtonini.com>

	* README: Add some notes here.
	* NOTES: Remove, its out of date.

2003-03-30  Ross Burton  <ross@burtonini.com>

	* autogen.sh: Arse, fix a syntax error.

2003-03-30  Ross Burton  <ross@burtonini.com>

	* */*: Initial import.