@@ -1,5 +1,10 @@
 2003-03-31  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-gstreamer.c: Cleansups.
+	* tests/glade-test.c: New rip algorithm, should work...
+
+2003-03-31  Ross Burton  <ross@burtonini.com>
+
 	* tests/Makefile.am (AM_CFLAGS): Whoops, need -export-dynamic
 	here. I wonder how it worked...
 
